--- a/week-7/gpa-calculator-app3/src/app/base-layout/base-layout.component.html
+++ b/week-7/gpa-calculator-app3/src/app/base-layout/base-layout.component.html
@@ -2,10 +2,10 @@
 ======================================
 ; Title: base-layout.component.html
 ; Author: Chris Gorham
-; Date: 27 June 2023
-; Description: This code supports functionality for the GPA Calculator App (Part 2)
+; Date: 03 July 2023
+; Description: This code supports functionality for the GPA Calculator App (Part 3)
 ; Sources Used:
-; Assignment 6.4 Instructions
+; Exercise 7.2 Instructions
 =====================================
 -->
 
@@ -17,6 +17,8 @@
     <div style="width: 80%">
       <div fxLayout="row wrap" fxLayoutAlign="end start">
         <button mat-button routerLink="/">Home</button>
+        <!--Button for signing out that calls the sign out function-->
+        <button mat-button (click)="signOut()">Sign Out</button>
       </div>
     </div>
   </mat-toolbar-row>
